--- a/metadata.yaml
+++ b/metadata.yaml
@@ -28,6 +28,7 @@ subjects:
 - !lcsh 'Slaves -- Arkansas -- Social conditions'
 - !lcsh 'Slaves -- Arkansas -- Biography'
 - !lcsh 'African Americans -- Arkansas -- Biography'
+- GITenberg
 title: "Slave Narratives: a Folk History of Slavery in the United States\r\nFrom Interviews\
   \ with Former Slaves\r\nArkansas Narratives, Part 2"
 url: http://www.gutenberg.org/ebooks/13700
